# openfabric

./: .gitignore  AGENT_CONTRACT_V1.md  GRAPH_ARCHITECTURE.md  LICENSE  OPENWEBUI.md  PLANNER_NORMALIZATION.md  README.md  Readme.md  SESSION_CHECKPOINT.md  VERSION_4_PRIMITIVE_CATALOG.md  cli.py  codex_ui_gateway.py  config.example.yaml  config.yaml  config_ucla.yaml  docker_images.txt  file_manager.py  install.sh  museum.txt  openwebui_gateway.py  p1.txt  pyproject.toml  report.json  requirements.txt  startup.sh  test_agent_contracts.py  test_codex_ui_gateway.py  test_common_reducer.py  test_data_reducer.py  test_engine_validation.py  test_llm_operations_planner.py  test_node_envelope_noncore.py  test_openwebui_gateway.py  test_planner_replan_guard.py  test_reducer_contracts.py  test_run_inspector.py  test_run_observability.py  test_run_visualizer.py  test_runtime_config.py  test_runtime_graph.py  (+9 more)
agent_library/: README.md  __init__.py  common.py  contracts.py  reduction.py  template.py
docker/: Dockerfile  docker-compose.yaml
docs/: 01_overview_for_humans.md  02_request_lifecycle.md  03_components_and_boundaries.md  04_llm_stages_and_contracts.md  05_capabilities_safety_and_gateway.md  06_worked_example_memory_report.md  ADDING_A_CAPABILITY.md  ARCHITECTURE.md  CAPABILITY_PACKS.md  CODEX_UI.md  DEBUGGING_GUIDE.md  EVALUATION_AND_REGRESSION.md  GRAPH_ARCHITECTURE.md  INSIGHT_LAYER.md  INTENT_AND_COMPILER_MODEL.md  LLM_INTENT_EXTRACTION_DESIGN.md  MERMAID_DIAGRAMS.md  PROMPT_LIFECYCLE_README.md  RESPONSE_RENDERING.md  SHELL_INTELLIGENCE.md  SLURM_CAPABILITY_DESIGN.md  SQL_CAPABILITY_DESIGN.md  SYSTEM_DESIGN.md  TOOLS_AND_RUNTIME.md  V10_ECHO_RESET.md  architecture.md
examples/: general_purpose_assistant.yaml  hello.yml  hello_http.yml
(+439 files in other folders)
