[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aor-runtime"
version = "0.10.0"
description = "OpenFABRIC agent runtime with typed planning, execution, and OpenAI-compatible APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1.0",
  "pydantic>=2.11,<3.0",
  "pyyaml>=6.0.2,<7.0",
  "rich>=14.0,<15.0",
  "typer>=0.16,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "ipython>=9.0,<10.0",
  "pytest>=8.0,<9.0",
]

[project.scripts]
aor = "agent_runtime.api.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
